2016-02-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Updated to changes in L1B frequency part. And some associated
	code improvements.

2016-02-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: L2d changed.

	* Mscripts_arts/q2_arts_sensor_parts.m: Old mixer and backend, now
	treated as one part. Clearer handling of LO. 

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Some smaller changes and bug fixes.

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* More work on filling L2.

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Added ztan and frequency croppting. Started on L2.

2016-02-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4se): Introduced different models
	for correlation of noise between channels.

2016-02-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Added retrieval of frequency off-set and temperature. Better
	description of noise in Se.

2016-01-31  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Retrieval of species, baseline and pointing now in place.

2016-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_oemiter.m: Now started.

2016-01-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: Mainly work in this function. Some steps
	towards inversions.

2016-01-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_fields.rst:
	* Settings/q_std.m (q_std):
	* Mscripts_arts/q2_inv.m (q2_inv): Introduced the OEM-ML settings.

2016-01-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Started to implement retrievals.

	* Mscripts_arts/q2_inv.m: Started.

	* Settings/q_std.m: Polished and removed handling of multiple
	fmodes.

	* Settings/q_multi.m: A help function to compile arrays of Q.

	* Mscripts_database/l1b_crop.m: Corrected bug in indexing of
	SubBandIndex.

	* Mscripts_qsystem/q2_check_q.m: Extended an error message.
